fixed alignment issues up top, added masthead

--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
                 <p class="info-text">Adobe Illustrator</p>
             </div>
         </div>
+
+    </div>
+    <div class="masthead">
+        <p class="info-text">Created from scratch by Austin Szatrowski (2021)</p>
     </div>
     <script src="scripts/main.js"></script>
 </body>
