--- a/index.html
+++ b/index.html
@@ -145,11 +145,9 @@
                 <p class="info-text">Adobe Illustrator</p>
             </div>
         </div>
-
     </div>
     <div class="masthead">
-        <p class="info-text">Created from scratch by Austin Szatrowski (2021)</p>
+        <p class="info-text">Created from scratch by Austin Szatrowski (2021).</p>
     </div>
-    <script src="scripts/main.js"></script>
 </body>
 </html>
