"uchicago" -> "school" + line heigh
per anna's request

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>UChicago</td>
+                                <td>School</td>
                                 <td class="email-link" style="text-align: right">
                                     <a href="mailto:aszatrowski@uchicago.edu">
                                         aszatrowski@uchicago.edu
