added Alvin Bragg for DA

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div>
                 <button type="button" id="workexp" class="bttn-custom heading">Experience</button>
                 <div id="work-info" class="container">
+                    <h3 class="item-header">Field Organizer, Alvin Bragg for Manhattan District Attorney</h3>
+                        <p class="accent-text">June 2021 - July 2021</p>
+                        <p class="info-text">As a field organizer, I worked ten- to fifteen-hour days speaking to voters on the street, organizing dozens of volunteers for canvassing shifts, delivering materials all over Manhattan, making campaign calls, learning about Manhattan politics and election law, and monitoring the absentee ballot count. We were outspent 7 to 1 by a Wall Street-backed campaign—and we won.</p>
                     <h3 class="item-header">Lab of Dr. Travis Hollmann, Memorial Sloan Kettering Cancer Center</h3>
                         <p class="accent-text">January 2020 - April 2021</p>
                         <p class="info-text">Worked in a computational pathology and proteiomics lab, contributing heavily to a project studying the loss of Beta-2-microglobulin experession in renal cell carcinomas. Learned independent problem-solving and taught myself linear mixed model statistics to finish the data analysis. Gained extensive experience with R and RStudio.</p>
