rewrote descriptions, removed buttons for std h2s, added strongs

--- a/index.html
+++ b/index.html
@@ -26,25 +26,26 @@
                 I'm Austin Szatrowski, an incoming first-year at the University of Chicago, interested in <strong>biology, public policy,</strong> and <strong>data science.</strong> I have both <strong>dry and wet lab experience in molecular biology,</strong> some background with <strong>R</strong> for statistics, and <strong>leadership experience</strong> from running my high school's newspaper and Science Olympiad through the pandemic year.
             </div>
             <div>
-                <button type="button" id="workexp" class="bttn-custom heading">Experience</button>
+                <h2 class="heading">Experience</h2>
                 <div id="work-info" class="container">
                     <h3 class="item-header">Field Organizer, Alvin Bragg for Manhattan District Attorney</h3>
                         <p class="accent-text">June 2021 - July 2021</p>
-                        <p class="info-text">As a field organizer, I worked ten- to fifteen-hour days speaking to voters on the street, organizing dozens of volunteers for canvassing shifts, delivering materials all over Manhattan, making campaign calls, learning about Manhattan politics and election law, and monitoring the absentee ballot count. We were outspent 7 to 1 by a Wall Street-backed campaign—and we won.</p>
+                        <p class="info-text">Worked ten- to fifteen-hour days speaking to voters on the street, <strong>managing dozens of volunteers</strong> for canvassing shifts, <strong>delivering materials</strong> all over Manhattan, making <strong>259 campaign calls,</strong> learning about Manhattan politics and election law, and <strong>monitoring the absentee ballot count.</strong> We were outspent 7 to 1 by a Wall Street-backed campaign—<strong>and we won.</strong></p>
                     <h3 class="item-header">Lab of Dr. Travis Hollmann, Memorial Sloan Kettering Cancer Center</h3>
                         <p class="accent-text">January 2020 - April 2021</p>
-                        <p class="info-text">Worked in a computational pathology and proteiomics lab, contributing heavily to a project studying the loss of Beta-2-microglobulin experession in renal cell carcinomas. Learned independent problem-solving and taught myself linear mixed model statistics to finish the data analysis. Gained extensive experience with R and RStudio.</p>
+                        <p class="info-text">Armed with practical experience from the Weigelt-Reis-Filho Lab, I moved beyond ad-hoc tasks to conduct <strong>high-throughput genomic analysis</strong> for a project studying the role of Beta-2-microglobulin in the behavior of renal cell carcinomas. <strong>I learned the necessary statistics as I went,</strong> using <strong>linear mixed models in R</strong> to look for expression differences in <strong>49 molecular targets</strong> between B2M-retaining and B2M-deficient tumors</p>
                     <h3 class="item-header">Lab of Dr. Britta Weigelt and Dr. Jorge Reis-Filho, Memorial Sloan Kettering Cancer Center</h3>
                         <p class="accent-text">June 2019 - August 2019</p>
-                        <p class="info-text">Worked in a cancer genomics lab studying mutations in breast and endometrial tumors. Learned PCRs, DNA/RNA extractions, Western blots, and staining procedures; Attended oncology fellow lectures and treatment planning conferences.</p>
+                        <p class="info-text">
+                            Arriving with no prior experience, I took on a <strong>wide variety of molecular biology lab responsibilities</strong> (many with complicated procedures), including <strong>PCRs, DNA/RNA extractions, gel electrophoresis, Western blots, and staining procedures.</strong> I also attended regular lectures for oncology fellows and residents, where I learned about <strong>study design, clinical trial logistics, ethical issues, and current frontiers</strong> in cancer research and treatment.</p>
                     <h3 class="item-header">Executive Editor, <i>The Collegiate Journal</i></h3>
                         <p class="accent-text">May 2020 - June 2021</p>
-                        <p class="info-text">Originally recruited as a staff writer for Collegiate’s student-run monthly newspaper after publishing an op-ed calling for the removal of Collegiate’s mascot; took on Layout Editor position with no prior experience and learned InDesign as I went; promoted to Executive Editor in senior year, in which I managed an 18-person editorial board and 40+ staff writers and learned how to effectively delegate responsibilities; coordinated home delivery of 200 copies during the COVID-19 pandemic.</p>
+                        <p class="info-text">Originally recruited as a staff writer for Collegiate’s student-run monthly newspaper after publishing an op-ed calling for the removal of Collegiate’s mascot, I took on Layout Editor position with no prior experience and <strong>learned InDesign as I went.</strong> As a senior, I was promoted <strong>Executive Editor,</strong>a role in which I <strong>supervised an 18-person editorial board and 40+ staff writers,</strong> learned how to effectively delegate tasks, executed the printing and <strong>citywide home delivery of 200 paper copies,</strong> and <strong>navigated a sometimes tense relationship</strong> with faculty advisors and the school administration.</p>
                     <h3 class="item-header">Co-Captain, Collegiate School Science Olympiad</h3>
                         <p class="accent-text">June 2020 - June 2021</p>
-                        <p class="info-text">Managed Collegiate's 30-person Science Olympiad team through the pandemic year, including organizing for online tournaments, managing an ever-changing team roster, and keeping morale high without travel tournaments or in-person practices.</p>
+                        <p class="info-text">Coordinated and motivated Collegiate's 30-person Science Olympiad team through the pandemic year, including organizing for online tournaments, <strong>managing an ever-changing team roster,</strong> and <strong>keeping morale high</strong> without travel tournaments or in-person practices.</p>
                 </div>
-                <button type="button" name="education" class="bttn-custom heading">Education</button>
+                <h2 class="heading">Education</h2>
                 <div class="container" id="education-info">
                     <table border="0">
                         <tbody>
@@ -65,7 +66,7 @@
                                 </td>
                                 <td>
                                     <p class="info-text">
-                                        <strong>B.S., </strong>Biology & Data Science
+                                        <strong>B.A., </strong>Biology & Public Policy
                                     </p>
                                 </td>
                             </tr>
@@ -102,7 +103,7 @@
         </div>
         <div id=column2>
             <div class="sidebar-box">
-                <h2 class="heading">Contact</h2>
+                <h2 class="heading" style="color: #ffffff;">Contact</h2>
                     <h3 class="heading">Email</h3>
                         <table class="info-text" style="width: 100%">
                             <tr>
