added french proficiency to skills

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                 <p class="info-text">Lab experience with <strong>PCR, DNA extractions,  </strong> and <strong>staining</strong> </p>
                 <p class="info-text">Adobe InDesign</p>
                 <p class="info-text">Adobe Illustrator</p>
+                <p class="info-text">Proficient in <strong>French</strong> </p>
             </div>
         </div>
     </div>
