--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <h2 class="heading">Education</h2>
                 <div class="container" id="education-info">
-                    <table border="0">
+                    <table style="border:0px;">
                         <tbody>
                             <tr>
                                 <td rowspan="2">
